--- a/index.html
+++ b/index.html
@@ -194,22 +194,22 @@
     <div><img src="https://files.catbox.moe/nn42wt.jpg" alt="puteli kecil"></div>
     <div><img src="https://files.catbox.moe/6e0lxa.jpg" alt="puteli kecil"></div>
     <div><img src="https://files.catbox.moe/1v0nrw.jpg" alt="puteli kecil"></div>
-    <div><img src="https://files.catbox.moe/5gnyww.jpg" alt="puteli kecil tambahan"></div>
-    <div><img src="https://files.catbox.moe/y8kjpt.jpg" alt="puteli kecil tambahan"></div>
-    <div><img src="https://files.catbox.moe/lxv775.jpg" alt="puteli kecil tambahan"></div>
-    <div><img src="https://files.catbox.moe/appds3.jpg" alt="puteli kecil tambahan"></div>
-    <div><img src="https://files.catbox.moe/1a1j7d.jpg" alt="puteli kecil tambahan"></div>
-    <div><img src="https://files.catbox.moe/64runo.jpg" alt="puteli kecil tambahan"></div>
-    <div><img src="https://files.catbox.moe/nbfhzt.jpg" alt="puteli kecil tambahan"></div>
-    <div><img src="https://files.catbox.moe/o4zkhf.jpg" alt="puteli kecil tambahan"></div>
-    <div><img src="https://files.catbox.moe/tmwwdu.jpg" alt="puteli kecil tambahan"></div>
-    <div><img src="https://files.catbox.moe/gyc0pm.jpg" alt="puteli kecil tambahan"></div>
-    <div><img src="https://files.catbox.moe/3boat5.jpg" alt="puteli kecil tambahan"></div>
-    <div><img src="https://files.catbox.moe/a8n9ts.jpg" alt="puteli kecil tambahan"></div>
-    <div><img src="https://files.catbox.moe/scj24z.jpg" alt="puteli kecil tambahan"></div>
-    <div><img src="https://files.catbox.moe/s7bndm.jpg" alt="puteli kecil tambahan"></div>
-    <div><img src="https://files.catbox.moe/4a3fgv.jpg" alt="puteli kecil tambahan"></div>
-    <div><img src="https://files.catbox.moe/scj24z.jpg" alt="puteli kecil tambahan"></div>
+    <div><img src="https://files.catbox.moe/5gnyww.jpg" alt="puteli kecil"></div>
+    <div><img src="https://files.catbox.moe/y8kjpt.jpg" alt="puteli kecil"></div>
+    <div><img src="https://files.catbox.moe/ecr8y4.jpg" alt="puteli kecil"></div>
+    <div><img src="https://files.catbox.moe/appds3.jpg" alt="puteli kecil"></div>
+    <div><img src="https://files.catbox.moe/1a1j7d.jpg" alt="puteli kecil"></div>
+    <div><img src="https://files.catbox.moe/64runo.jpg" alt="puteli kecil"></div>
+    <div><img src="https://files.catbox.moe/nbfhzt.jpg" alt="puteli kecil"></div>
+    <div><img src="https://files.catbox.moe/o4zkhf.jpg" alt="puteli kecil"></div>
+    <div><img src="https://files.catbox.moe/tmwwdu.jpg" alt="puteli kecil"></div>
+    <div><img src="https://files.catbox.moe/gyc0pm.jpg" alt="puteli kecil"></div>
+    <div><img src="https://files.catbox.moe/3boat5.jpg" alt="puteli kecil"></div>
+    <div><img src="https://files.catbox.moe/a8n9ts.jpg" alt="puteli kecil"></div>
+    <div><img src="https://files.catbox.moe/scj24z.jpg" alt="puteli kecil"></div>
+    <div><img src="https://files.catbox.moe/s7bndm.jpg" alt="puteli kecil"></div>
+    <div><img src="https://files.catbox.moe/4a3fgv.jpg" alt="puteli kecil"></div>
+    <div><img src="https://files.catbox.moe/scj24z.jpg" alt="puteli kecil"></div>
 </div>
     
     <div class="wave-container" id="wave-container">
