--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
     }
 }
     .gallery {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        padding: 20px;
-        background: url('https://cdn.xtermai.xyz/i36/3AI') center/cover fixed no-repeat;
-        padding: 60px 20px;
-        border-radius: 20px;
-    }
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    padding: 60px 20px;
+    background: url('https://cdn.xtermai.xyz/i36/3AI') center/cover fixed no-repeat;
+    border-radius: 20px;
+}
     .gallery img {
         margin: 15px;
         border-radius: 15px;
